<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="AppCompatResource">


    <item
        android:id="@+id/loop"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/loop"
        android:title="Loop"
        android:titleCondensed="Off"
        android:visible="true" />
    <item
        android:id="@+id/cenel_open"
        android:showAsAction="never"
        android:title="@string/open"
        android:visible="false" />
    <item
        android:id="@+id/pip"
        android:icon="@drawable/pip"
        android:title="PIP" />
    <item
        android:icon="@drawable/speed"
        android:title="@string/speed">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/tooslow"
                    android:checkable="false"
                    android:title="0.25" />
                <item
                    android:id="@+id/slow"
                    android:checkable="false"
                    android:title="0.5" />
                <item
                    android:id="@+id/ns"
                    android:checkable="false"
                    android:checked="true"
                    android:title="1" />
                <item
                    android:id="@+id/fast"
                    android:checkable="false"
                    android:title="1.5" />
                <item
                    android:id="@+id/toofast"
                    android:checkable="false"
                    android:title="2" />
            </group>

        </menu>
    </item>

    <item
        android:id="@+id/livechat_ic"
        android:icon="@drawable/live_chat"
        android:title="Live Chat"
        android:visible="false" />

    <item
        android:id="@+id/shorset"
        android:icon="@drawable/settings"
        android:title="@string/set"
        android:visible="false" />
    <item
        android:id="@+id/del_ic"
        android:icon="@drawable/add"
        android:showAsAction="ifRoom"
        android:title="Add / Delete" />
    <item
        android:id="@+id/share_ic"
        android:icon="@drawable/share"
        android:title="@string/share"
        android:visible="true"
        android:showAsAction="always"/>

</menu>