<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="60sp"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/app_name" />

        <FrameLayout
            android:layout_marginTop="25dp"
            android:id="@+id/search_con"
            android:layout_marginLeft="@dimen/marginSearchBar"
            android:layout_marginRight="@dimen/marginSearchBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginContent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/marginContent"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/saved"
                    android:drawablePadding="10dp"
                    android:text="@string/library" />

                <Button
                    android:id="@+id/f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/favcha"
                    android:drawablePadding="10dp"
                    android:text="@string/favcha" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>



</ScrollView>