<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:clipToPadding="false"
    android:paddingTop="5dp"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/colorBackground"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="Query" />

                <EditText
                    android:id="@+id/query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:padding="12dp" />
            </LinearLayout>


            <ImageButton
                android:id="@+id/openq"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:pointerIcon="hand"
                android:src="@drawable/history"
                android:tooltipText="@string/history_search" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/colorBackground"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="Channel Id" />

                <EditText
                    android:id="@+id/channelId"
                    android:background="@null"
                    android:inputType="textFilter|textNoSuggestions|textAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:padding="12dp" />
            </LinearLayout>


            <ImageButton
                android:id="@+id/openc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:pointerIcon="hand"
                android:src="@drawable/favcha"
                android:tooltipText="@string/favcha" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/colorBackground"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/order" />

                <Spinner
                    android:id="@+id/order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:listitem="@android:layout/simple_list_item_1" />
            </LinearLayout>


        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:elevation="5dp"
            android:id="@+id/npl"
            android:visibility="gone"
            android:orientation="horizontal"
            android:background="?android:attr/colorBackground">
            <Button
                android:id="@+id/np"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:pointerIcon="hand"
                android:layout_weight="0.5"
                style="?android:borderlessButtonStyle"
                android:text="Next page" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:background="?android:attr/colorBackground">
            <Button
                android:id="@+id/cf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:pointerIcon="hand"
                android:layout_weight="0.5"
                style="?android:borderlessButtonStyle"
                android:text="@string/clear" />
            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:pointerIcon="hand"
                android:layout_weight="1"
                android:textColor="?android:textColorPrimaryInverse"
                android:backgroundTint="?android:colorAccent"
                android:text="@android:string/search_go" />
        </LinearLayout>





    </LinearLayout>

</ScrollView>